Compiler/tests/syntax/good/testfile-bang-1.rs
fn main() { print! ( 1 ); return; }
