Compiler/tests/syntax/bad/testfile-bloc-1.rs
fn main() { if true print!("yes"); }
